# axum-dixous-admin

./: .gitignore  .gitmodules  AGENTS.md
.gitee/workflows/: ci.yml
.github/workflows/: ci.yml
.trae/documents/: add-casbin-rbac.md  add-utoipa-openapi.md  dioxus-antd-component-library.md  dynamic-menu-plan.md  frontend-role-management.md  (+2 more)
axum-dixous-admin-wx/: package-lock.json  package.json  project.config.json  project.private.config.json
backend/: .dockerignore  .gitignore  Cargo.toml  README.md  README_EN.md  compose.yml  mysql.sql
backend/.cargo/: config.toml
backend/data/mysql/: auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
backend/data/mysql/#innodb_redo/: #ib_redo10  #ib_redo11  #ib_redo12  #ib_redo13  #ib_redo14  #ib_redo9
backend/data/mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
backend/data/mysql/gva/: casbin_rule.ibd  exa_file_chunks.ibd  exa_file_upload_and_downloads.ibd  exa_files.ibd  jwt_blacklists.ibd  sys_apis.ibd  sys_authorities.ibd  sys_authority_btns.ibd  sys_authority_menus.ibd  sys_auto_code_histories.ibd  sys_auto_codes.ibd  sys_base_menu_btns.ibd  sys_base_menu_parameters.ibd  sys_base_menus.ibd
backend/data/mysql/mysql/: general_log_224.sdi  slow_log_225.sdi
backend/data/mysql/performance_schema/: accounts_153.sdi  binary_log_trans_200.sdi  cond_instances_87.sdi  data_lock_waits_170.sdi  data_locks_169.sdi  error_log_88.sdi  events_errors_su_147.sdi  events_errors_su_148.sdi  events_errors_su_149.sdi  events_errors_su_150.sdi  events_errors_su_151.sdi  events_stages_cu_119.sdi  events_stages_hi_120.sdi  events_stages_hi_121.sdi  events_stages_su_122.sdi  events_stages_su_123.sdi  events_stages_su_124.sdi  events_stages_su_125.sdi  events_stages_su_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_statement_131.sdi  events_statement_132.sdi  events_statement_133.sdi  events_statement_134.sdi  events_statement_135.sdi  events_statement_136.sdi  events_statement_137.sdi  events_statement_138.sdi  events_transacti_139.sdi  events_transacti_140.sdi  events_transacti_141.sdi  events_transacti_142.sdi  events_transacti_143.sdi  events_transacti_144.sdi  events_transacti_145.sdi  events_transacti_146.sdi  events_waits_cur_89.sdi  (+76 more)
backend/data/mysql/scm/: casbin_rule.ibd  jwt_blacklists.ibd  post.ibd  seaql_migrations.ibd  sys_apis.ibd  sys_menu.ibd  sys_menu_role.ibd  sys_role.ibd  sys_user.ibd  sys_user_role.ibd
backend/data/mysql/sys/: sys_config.ibd
backend/data/redis/appendonlydir/: appendonly.aof.1.base.rdb
backend/server/: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  config.yml  fix_line_clean.py
backend/server/.cargo/: config.toml
backend/server/api/: Cargo.toml
backend/server/api/src/: api_api.rs  casbin_api.rs  data_role_api.rs  dictionary_api.rs  dictionary_detail_api.rs  generator_api.rs  jwt_api.rs  lib.rs  menu_api.rs  menu_btn_api.rs  menu_param_api.rs  operation_record_api.rs  role_api.rs  role_btn_api.rs  role_menu_api.rs  user_api.rs
backend/server/auth-layer/: Cargo.toml
backend/server/auth-layer/src/: lib.rs  middleware.rs
backend/server/casbin/: rbac_model.conf
backend/server/casbin-adapter/: Cargo.toml
backend/server/casbin-adapter/src/: action.rs  adapter.rs  entity.rs  lib.rs
backend/server/data/migration/: Cargo.toml
backend/server/data/migration/src/: lib.rs  m20220101_000001_create_sys_user.rs  m20230705_052744_create_sys_role.rs  m20230705_053111_create_sys_user_role.rs  m20240422_075347_create_sys_menu.rs  m20240423_112033_create_sys_apis.rs  m20240424_074636_create_sys_menu_role.rs  m20260701_000001_create_casbin_rule.rs  m20260701_000002_create_jwt_blacklists.rs  m20260708_000001_create_sys_generator_history.rs
backend/server/data/model/: Cargo.toml
backend/server/data/model/src/: lib.rs
backend/server/data/model/src/dao/: casbin_rule.rs  jwt_blacklists.rs  mod.rs  prelude.rs  sys_apis.rs  sys_base_menu_btns.rs  sys_base_menu_parameters.rs  sys_data_role_id.rs  sys_dictionaries.rs  sys_dictionary_details.rs  sys_generator_history.rs  sys_menu.rs  sys_menu_domain.rs  sys_menu_role.rs  sys_operation_records.rs  sys_role.rs  sys_role_btns.rs  sys_role_menus.rs  sys_user.rs  sys_user_role.rs
backend/server/data/model/src/dto/: casbin_dto.rs  jwt_blacklist_dto.rs  mod.rs  page_dto.rs  sys_api_dto.rs  sys_base_menu_btn_dto.rs  sys_base_menu_param_dto.rs  sys_data_role_dto.rs  sys_dictionary_detail_dto.rs  sys_dictionary_dto.rs  sys_generator_history_dto.rs  sys_menu_dto.rs  sys_operation_record_dto.rs  sys_role_btn_dto.rs  sys_role_dto.rs  sys_role_menu_dto.rs  sys_user_dto.rs  sys_user_role.rs
backend/server/gateway/: Cargo.toml
backend/server/gateway/src/: main.rs
backend/server/service/: Cargo.toml
backend/server/service/src/: casbin_service.rs  enforcer.rs  generator_code_service.rs  generator_history_service.rs  impls.rs  jwt_blacklist_service.rs  lib.rs  sys_api_service.rs  sys_base_menu_btn_service.rs  sys_base_menu_param_service.rs  sys_data_role_service.rs  sys_dictionary_detail_service.rs  sys_dictionary_service.rs  sys_menu_domain_service.rs  sys_menu_role_service.rs  sys_menu_service.rs  sys_operation_record_service.rs  sys_role_btn_service.rs  sys_role_menu_service.rs  sys_role_service.rs  sys_user_role_service.rs  sys_user_service.rs
backend/server/shell/: gen_entity.sh  install_sea_orm_cli.sh  migrate_table.sh
backend/server/utils/: Cargo.toml
backend/server/utils/src/: auth.rs  cache.rs  config.rs  db.rs  error.rs  level.rs  lib.rs  password_utils.rs  prelude.rs  rand_utils.rs  res.rs  state.rs  traits.rs
backend/server/utils/tests/: test_password_utils.rs
backend/tests/: api_tests.rs  http_route_test.rs  integration_test.rs  role_casbin_test.rs
backend/tests/common/: mod.rs
generator/: Cargo.toml  README.md
(+60 files in other folders)
