[workspace]
members = ["server/api", "server/auth-layer", "server/casbin-adapter", "server/data/migration", "server/data/model", "server/utils", "server/service", "server/gateway", "."]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

# See more keys and their dependencies at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
#运行时
tokio = "1"
async-std = "1"

#web
axum = "0.8"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1"
hyper = "1.3.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
mime = "0.3"
#casbin
casbin = { version = "2", features = ["cached"] }

#orm
sea-orm = "1"
sea-orm-migration = "1"
#opanapi
utoipa = { version = "5", features = ["time"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
#错误
thiserror = "2"
anyhow = "1"
#序列化
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
#日志追踪
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.17"
#tools
async-trait = "0.1"
futures-util = "0.3"
futures = "0.3"
chrono = "0.4.24"
bytes = "1.4.0"
once_cell = "1"
rand = "0.9.0"
uuid = "1.8.0"
# 密码
md5 = "0.7"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
password-auth = "1.0.0"

# jwt
jsonwebtoken = "9.1.0"
#内部模块
utils = { path = "server/utils" }
model = { path = "server/data/model" }
migration = { path = "server/data/migration" }
auth-layer = { path = "server/auth-layer" }
casbin-adapter = { path = "server/casbin-adapter" }

[package]
name = "backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[[bin]]
name = "backend"
path = "server/gateway/src/main.rs"

[dependencies]
# 使用所有工作空间依赖
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
utils = { workspace = true }
migration = { workspace = true }
tracing = { workspace = true }
model = { workspace = true }
sea-orm = { workspace = true }
casbin = { workspace = true }
casbin-adapter = { workspace = true }
auth-layer = { workspace = true }
tower-http = { workspace = true }
service = { path = "server/service" }
api = { path = "server/api" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z" # Optimize for size.
panic = 'abort'