[package]
name = "service"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true }
model = { workspace = true }
utils = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
casbin = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
utoipa = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
[dev-dependencies]
tokio = { workspace = true, features = ["full"] }