[package]
name = "model"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sea-orm = { workspace = true, features = ["sqlx-mysql", "runtime-tokio-rustls", "with-time"] }
utoipa = { workspace = true }
time = { version = "0.3", features = ["serde-well-known"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }